# panegyric

./: .env.enc  .envrc  .gitignore  .pylintrc  .travis.yml  Pipfile  README.md  changelog.md  conf.py  index.md  license.md  readme.md  s.md  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: codeql-analysis.yml  documentation.yml  metadata.yml  pages.yml  python-app.yml
compliments/: work-card.yaml
docs/: index.md  modules.md  panegyric.md  tests.md  usage.md
docs/source/: conf.py  index.rst  panegyric.rst
panegyric/: pyproject.toml  readme.md  text.py
panegyric/src/panegyric/: __about__.py  __init__.py
panegyric/tests/result/: compliments.yml
src/compliments/: work-card.yaml
src/panegyric/: __init__.py  text.py
src/tests/: __init__.py  conftest.py  test_text.py
src/tests/fixtures/: resp.json
tests/: compliments.yml  conftest.py  test_text.py
tests/expected/: compliments.yml
tests/fixtures/: compliments-duplicate-date.yml  compliments-no-date.yml  compliments-with-date.yml
tests/result/: compliments.yml
textmywife/: text.py
