[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "panegyric"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Xander Harris", email = "xandertheharris@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/edwardtheharris/panegyric#readme"
Issues = "https://github.com//panegyric/issues"
Source = "https://github.com/Xander Harris/panegyric"

[tool.hatch.version]
path = "src/panegyric/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/panegyric tests}"

[tool.coverage.run]
source_pkgs = ["panegyric", "tests"]
branch = true
parallel = true
omit = [
  "src/panegyric/__about__.py",
]

[tool.coverage.paths]
panegyric = ["src/panegyric", "*/panegyric/src/panegyric"]
tests = ["tests", "*/panegyric/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
